# pibright

./: PKGBUILD  README.md  meson.build
build-aux/meson/: postinstall.py
data/: pibright.css  pibright.desktop
src/: Application.vala
